// generated by openapi-gen-protobuf

syntax = "proto3";

package erda.openapi;

option go_package = "github.com/erda-project/erda-proto-go/openapiv1/openapi/component/protocol/pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";

import "common/openapi.proto";
import "common/identity.proto";

message ComponentProtocolResponseData {
    google.protobuf.Value scenario = 1;
    google.protobuf.Value protocol = 2;
}
message UserInfo {
    string ID = 1 [json_name = "id"];
    string name = 2;
    string nick = 3;
    string avatar = 4;
    string phone = 5;
    string email = 6;
    string token = 7;
    string lastLoginAt = 8;
    string pwdExpireAt = 9;
    string source = 10;
}
message ComponentEvent {
    string component = 1;
    string operation = 2;
    map<string, google.protobuf.Value> operationData = 3;
}
message Hierarchy {
    string version = 1;
    string root = 2;
    map<string, google.protobuf.Value> structure = 3;
}
message RendingState {
    string name = 1;
    string value = 2;
}
message ComponentProtocol {
    string version = 1;
    string scenario = 2;
    optional google.protobuf.Value globalState = 3 [json_name = "state"];
    google.protobuf.Value hierarchy = 4;
    map<string,  google.protobuf.Value> components = 5;
    map<string, google.protobuf.Value> rendering = 6;
}
message ComponentProtocolResponse {
    google.protobuf.Value data = 1;
    repeated string userIDs = 2;
    map<string, google.protobuf.Value> userInfo = 3;
}
message ComponentProtocolScenario {
    string scenarioType = 1;
    string scenarioKey = 2;
}
message ComponentProtocolRequest {
    google.protobuf.Value scenario = 1;
    google.protobuf.Value event = 2;
    map<string, google.protobuf.Value> inParams = 3;
    optional google.protobuf.Value protocol = 4;
    optional google.protobuf.Value debugOptions = 5;
}
message RendingItem {
    string name = 1;
    repeated google.protobuf.Value state = 2;
}
// generate service from openapi spec: openapi_component_protocol
service openapi_component_protocol {
    option (erda.common.openapi_service) = {
        service: "openapi",
    };

    rpc Render (ComponentProtocolRequest) returns (ComponentProtocolResponse) {
        option (google.api.http) = {
            post: "/api/component-protocol/actions/render",
        };
        option (erda.common.openapi) = {
            path: "/api/component-protocol/actions/render",
            auth: {
                no_check: false,
                check_login: true,
                try_check_login: false,
                check_token: true,
                check_basic_auth: false,
            },
            doc: "某场景下，用户操作，触发后端业务逻辑，重新渲染协议",
        };
    };
}
